test/cherry/Language/list_type_mlir.cherry
# RUN: not cherry-driver -dump=mlir %s 2>&1 | FileCheck %s

fn read(values: List<Float32[?, ?]>): UInt64 {
  0
}

fn main(): UInt64 {
  0
}

# CHECK: error: function parameters containing Tensor require list/tensor descriptor ABI
